--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,20 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="user-scalable=no, width=device-width, initial-scale=1.0"
+    />
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
-        <style>
-            html,
-            body {
-                margin: 0;
-                padding: 0;
-            }
-        </style>
-    </head>
-
-    <body>
-        <div id="game"></div>
-    </body>
-
+  <body>
+    <div id="game"></div>
+  </body>
 </html>
